--- a/Day4/dtna-lesson04/public/index.html
+++ b/Day4/dtna-lesson04/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>K23CNT1-Doan Thi Ngoc Anh</title>
+    <title>Đoàn Thị Ngọc Ánh</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   </head>
   <body>
